# duck-simulator

./: bred.glb  duck.glb  index.html  readme.md  todo.md
admin/: index.html  script.js
assets/: index-B2HF09_V.js  index-BXgj6mRR.js  index-BsjxTtTZ.js  index-C13USIk0.js  index-CbJUMVlt.js  index-D41CLBv4.js  index-D7vej6OU.js  index-DUWpIMpu.js  index-DVFhRQm9.js  index-DYRUmuaG.js  index-D_TSV-jH.js  index-Dt296VBw.js  index-DwJX4niY.js  index-FF0fpKtG.js  index-Rxyp2XZI.js  index-t5lM57Bh.js
client/: bun.lockb  eslint.config.js  index.html  package.json  protos.proto  protos_pb.ts
client/protos/: update_pb.ts  update_sync_pb.ts
client/public/: duck.glb  rabbit.glb  waterfallpond2.glb
client/src/: bread.ts  debug.ts  duck.ts  game.ts  main.ts  menu.ts  options.ts  pond.ts  server.ts  style.css  troika-three-text.d.ts
client/src/maps/: clouds.ts  default.ts  maps.ts  ocean.ts
client/src/objects/: duck.ts  pond.ts
server/: .gitignore  Cargo.toml  build.rs
server/src/: client.rs  duck.rs  lobby.rs  main.rs  server.rs  state.rs
server/src/protos/: mod.rs  protos.proto  update.proto  update_sync.proto
server/static/: index.html
